Updated after 4/2 class